Imagem da página 404 centralizada

--- a/404.md
+++ b/404.md
@@ -5,4 +5,4 @@ title: 404 - Página não encontrada
 
 Desculpe, não conseguimos encontrar a página que você está procurando. Você pode tentar de novo voltando à [página inicial]({{ site.baseurl }}/).
 
-[<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.baseurl }}/)
+[<img src="{{ site.baseurl }}/images/404.jpg?style=imgcenter" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.baseurl }}/)
